[project]
name = "jianbing-utils"
version = "0.1.1"
description = "煎饼 Util —— 自研通用工具库：小而全、开箱即用、静态方法/纯函数为主。首个模块：S3 分片上传/下载。"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "元气码农少女酱" }]
keywords = ["s3", "multipart", "presigned", "object-storage", "utils", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
# 运行期零硬依赖：s3 客户端（boto3）走可选 extra，模块内惰性导入，保持库轻量、安装快。
dependencies = []

[project.optional-dependencies]
# S3 兼容对象存储：presigned 签发 / multipart 生命周期管理需要 boto3。
s3 = ["boto3>=1.34"]

[project.urls]
Homepage = "https://github.com/yuanqimanong/jianbing_utils"
Repository = "https://github.com/yuanqimanong/jianbing_utils"

# 纯 Python 库首选 uv_build 后端（零配置、默认 src layout）。锁上界：uv 0.x 允许 minor 破坏性变更。
[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.10"]

[tool.ruff]
target-version = "py311" # 库下限 3.11，代码须保持 3.11 语法兼容
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
